--- a/app/src/main/res/layout/activity_vista_tanques_principal.xml
+++ b/app/src/main/res/layout/activity_vista_tanques_principal.xml
@@ -929,6 +929,7 @@
             android:id="@+id/campoRps"
             style="@android:style/Widget.DeviceDefault.EditText"
             android:textSize="14sp"
+            android:text="0.49"
             />
 
         <EditText
