Cambio color texto temperatura en graficatanque

--- a/app/src/main/res/layout/activity_grafica_tanque.xml
+++ b/app/src/main/res/layout/activity_grafica_tanque.xml
@@ -37,7 +37,9 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="Temperatura Inicial Alimento"
-            android:inputType="number|numberDecimal" />
+            android:inputType="number|numberDecimal"
+            android:textColor="@color/white"
+            android:textColorHint="@android:color/darker_gray" />
 
         <Button
             android:id="@+id/btonAceptar"
