Cambios en clase ppl tanque

--- a/app/src/main/res/layout/activity_grafica_tanque.xml
+++ b/app/src/main/res/layout/activity_grafica_tanque.xml
@@ -6,7 +6,6 @@
     android:background="@color/oscuro"
     android:weightSum="1">
 
-
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="278dp">
@@ -34,9 +33,8 @@
             android:id="@+id/temperatura"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:ems="10"
-            android:hint="Temperatura Inicial Alimento"
+            android:hint="Temp. inicial del alimento"
             android:inputType="number|numberDecimal"
             android:textColor="@color/white"
             android:textColorHint="@android:color/darker_gray" />
@@ -45,7 +43,7 @@
             android:id="@+id/btonAceptar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.66"
             android:text="Aceptar" />
     </LinearLayout>
 </LinearLayout>
