--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,49 +8,58 @@
     android:background="@drawable/fondologin1"
     tools:context="com.example.juan.foodapp.controlador.LoginActivity">
 
-    <EditText
+    <TextView
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_marginBottom="66dp"
+        android:text="Nombre:"
+        android:layout_alignBaseline="@+id/asignatura"
+        android:layout_alignBottom="@+id/asignatura"
+        android:layout_toLeftOf="@+id/asignatura"
+        android:layout_toStartOf="@+id/asignatura"
+        android:layout_marginRight="13dp"
+        android:layout_marginEnd="13dp" />
+
+    <EditText
         android:id="@+id/asignatura"
+        style="@android:style/Widget.DeviceDefault.EditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="63dp"
+        android:ems="8"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:layout_above="@+id/userMail"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:hint="Nombre"
-        style="@android:style/Widget.DeviceDefault.EditText" />
+        android:layout_centerHorizontal="true" />
 
     <EditText
+        android:id="@+id/profesor"
+        style="@android:style/Widget.DeviceDefault.EditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:layout_marginTop="56dp"
-        android:id="@+id/profesor"
-        android:textColor="@color/white"
-        android:layout_alignTop="@+id/asignatura"
         android:layout_alignLeft="@+id/asignatura"
         android:layout_alignStart="@+id/asignatura"
+        android:layout_alignTop="@+id/asignatura"
+        android:layout_marginTop="56dp"
+        android:ems="8"
+        android:inputType="number"
         android:textAlignment="center"
-        android:hint="ID"
-        style="@android:style/Widget.DeviceDefault.EditText" />
+        android:textColor="@color/white" />
 
     <EditText
+        android:id="@+id/userMail"
+        style="@android:style/Widget.DeviceDefault.EditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/userMail"
-        android:layout_marginBottom="12dp"
-        android:textColor="@color/white"
-        android:textAlignment="center"
-        android:hint="Correo electrónico"
-        style="@android:style/Widget.DeviceDefault.EditText"
         android:layout_above="@+id/btnLogin"
         android:layout_alignLeft="@+id/profesor"
-        android:layout_alignStart="@+id/profesor" />
+        android:layout_alignStart="@+id/profesor"
+        android:layout_marginBottom="11dp"
+        android:ems="8"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/btnLogin"
@@ -62,5 +71,25 @@
         android:layout_marginBottom="33dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="E-mail:"
+        android:layout_alignBaseline="@+id/userMail"
+        android:layout_alignBottom="@+id/userMail"
+        android:layout_alignRight="@+id/textView7"
+        android:layout_alignEnd="@+id/textView7" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Id:"
+        android:layout_alignBaseline="@+id/profesor"
+        android:layout_alignBottom="@+id/profesor"
+        android:layout_alignRight="@+id/textView3"
+        android:layout_alignEnd="@+id/textView3" />
 
 </RelativeLayout>
