--- a/app/src/main/res/layout/activity_practicas_guardadas_placas.xml
+++ b/app/src/main/res/layout/activity_practicas_guardadas_placas.xml
@@ -13,7 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="512dp"
         android:layout_marginBottom="30dp"
-        android:layout_weight="0.36">
+        android:layout_weight="0.36"
+        android:cacheColorHint="@color/white"
+        >
+
 
     </ListView>
 
