--- a/app/src/main/res/layout/activity_tabla_resultados.xml
+++ b/app/src/main/res/layout/activity_tabla_resultados.xml
@@ -6,7 +6,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/claro">
 
         <HorizontalScrollView
             android:layout_width="match_parent"
