--- a/app/src/main/res/layout/list_header_row_selecciona_laboratorio.xml
+++ b/app/src/main/res/layout/list_header_row_selecciona_laboratorio.xml
@@ -7,10 +7,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#234562"
         android:text="Selecciona un laboratorio"
         android:textAlignment="center"
-        android:textSize="20dp"
-        android:background="#234562"
-        android:textColor="#ffffff"/>
+        android:textColor="#ffffff"
+        android:textSize="20dp" />
 
 </LinearLayout>
